Add teacher email to test

--- a/templates/designs/default.html
+++ b/templates/designs/default.html
@@ -85,7 +85,8 @@
 			<div class="submit">
 				<p>Introduce your email so we can send you the results of your test :)</p>
 				<ul class="error" style="display: none;"></ul>
-				<input type="email" name="email" id="email" placeholder="email">
+				<input type="email" name="studentEmail" id="studentEmail" placeholder="email">
+				<input type="email" name="teacherEmail" id="teacherEmail" placeholder="email" style="display: none;" value="{{ teacher_email }}">
 				<button>Send</button>
 			</div>
 
