--- a/static/templates/login.html
+++ b/static/templates/login.html
@@ -1,8 +1,8 @@
 <div class="login">
 	<div class="login-header">
-		<a class="main-logo" href="/">
-			<img src="/static/img/logo.svg"/>
-		</a>
+		<div class="main-logo">
+			<img  src="/static/img/logo.svg"/><span>// Trivia</span>
+		</div>
 	</div>
 
 	<form class="login-form" ng-submit="submitLoginForm()">
