Add trivia name to header

--- a/templates/designs/default.html
+++ b/templates/designs/default.html
@@ -59,6 +59,7 @@
 					{% set name = title.split(" ") %}
 					<h1 class="name">{{ name[0] }}</h1>
 					<h1 class="surname">{{ " ".join(name[1:]) }}</h1>
+					<h3 class="trivia">Trivia</h3>
  				</div>
 			</div>
 
