--- a/static/style/templates/default.css
+++ b/static/style/templates/default.css
@@ -32,9 +32,9 @@ body {
   display: inline-block;
   width: auto;
   max-width: 70%;
-  text-align: left;
   font-size: 40px;
-  line-height: 70px; }
+  line-height: 70px;
+  text-align: center; }
   .header .text .name {
     display: block;
     font-weight: 300 !important; }
@@ -42,6 +42,9 @@ body {
     display: block;
     font-family: 'Abril Fatface', cursive;
     font-weight: normal; }
+  .header .text .trivia {
+    text-transform: uppercase;
+    margin: 3vh 0 0; }
 
 .logo {
   display: inline-block;
@@ -108,12 +111,14 @@ body {
       margin: 1vh 5vw; }
     .questions .question .answers {
       margin: 5vh 0;
-      display: block;
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-between;
       font-size: 25px; }
       .questions .question .answers div {
         display: inline-block;
         width: 22%;
-        margin: .5vh 1vw; }
+        margin: .5vh .5vw; }
         .questions .question .answers div .answer {
           padding: 1.5vh 1vw;
           border: 1px solid white;
@@ -136,7 +141,7 @@ body {
   margin: 15vh auto;
   width: 50%;
   min-width: 300px;
-  max-width: 1024px;
+  max-width: 600px;
   font-size: 20px;
   text-align: right; }
   .submit p {
