--- a/static/style/style.css
+++ b/static/style/style.css
@@ -39,31 +39,30 @@ body {
   width: auto;
   height: auto;
   text-align: center;
-  background: #0085AC;
+  background: #4caf50;
   font-size: 16px;
   color: #ffffff;
   text-decoration: none;
   text-transform: none;
-  border: 0;
   border-radius: 3px;
   cursor: pointer;
   outline: none;
   padding: 10px 20px;
   box-sizing: border-box;
-  border: 1px solid #0085AC;
+  border: 1px solid #4caf50;
   font-family: 'Raleway', sans-serif;
   transition: all .2s ease-in-out; }
 
 .button.outline {
   background: #ffffff;
-  color: #0085AC; }
+  color: #4caf50; }
 
 .button:hover,
 .button:active,
 .button.outline:hover,
 .button.outline:active {
-  background: #007b9f;
-  border-color: #007b9f;
+  background: #2c8630;
+  border-color: #2c8630;
   color: #ffffff; }
 
 .button .icon {
@@ -78,7 +77,7 @@ body {
   vertical-align: top;
   width: 100%;
   height: auto;
-  background: #007b9f;
+  background: #2c8630;
   color: white;
   padding: 1vh 0;
   font-size: 0;
@@ -155,7 +154,7 @@ body {
       transition: all .2s ease-in-out;
       cursor: pointer; }
       .header .usermenu .toggleMenu:hover, .header .usermenu .toggleMenu:active {
-        background: #0085AC; }
+        background: #4caf50; }
     .header .usermenu .menu {
       display: block;
       vertical-align: top;
@@ -199,10 +198,10 @@ body {
       text-align: right; }
       .steps .go-button.go-forward a {
         color: white;
-        background: #0085AC;
-        box-shadow: 0px 5px 3px #f2f2f2; }
+        background: #4caf50;
+        box-shadow: 0 5px 3px #f2f2f2; }
         .steps .go-button.go-forward a:hover, .steps .go-button.go-forward a:active {
-          background: #007b9f; }
+          background: #2c8630; }
     .steps .go-button a {
       display: inline-block;
       vertical-align: top;
@@ -237,9 +236,10 @@ body {
       line-height: 50px;
       color: #bbbbbb; }
       .steps .bubbles .bubble.active .number {
-        background: #0085AC;
+        background: #4caf50;
         color: white;
-        font-weight: bold; }
+        font-weight: bold;
+        border: none; }
       .steps .bubbles .bubble.active .title {
         color: black; }
       .steps .bubbles .bubble .number {
@@ -332,12 +332,18 @@ body {
       vertical-align: top;
       width: 70%;
       height: auto;
-      text-align: center; }
+      text-align: center;
+      font-size: 2.5em;
+      max-height: 70px; }
       .login .login-header .main-logo img {
         display: inline-block;
         vertical-align: top;
         width: 100%;
         max-width: 400px; }
+      .login .login-header .main-logo span {
+        vertical-align: middle;
+        line-height: 100px;
+        margin: 0 2vw; }
   .login .login-form {
     display: inline-block;
     vertical-align: top;
@@ -351,7 +357,8 @@ body {
     .login .login-form .button {
       width: 30%;
       height: 50px;
-      box-shadow: 0px 5px 3px #f2f2f2; }
+      box-shadow: 0px 5px 3px #f2f2f2;
+      background-color: #0085AC; }
 
 /* Home */
 .index {
@@ -407,7 +414,7 @@ body {
         display: inline-block;
         vertical-align: top;
         text-transform: uppercase;
-        color: #007b9f;
+        color: #2c8630;
         background: transparent;
         width: auto;
         height: 30px;
@@ -445,7 +452,7 @@ body {
         cursor: pointer;
         transition: all .2s ease-in-out; }
         .index .search-form .results .item:hover, .index .search-form .results .item:active, .index .search-form .results .item.current, .index .login-form .results .item:hover, .index .login-form .results .item:active, .index .login-form .results .item.current {
-          background: #007b9f;
+          background: #2c8630;
           color: white; }
 
 /**
@@ -622,11 +629,11 @@ body {
         .pills .edit-popup .edit-form button.cancel {
           margin-right: 0; }
         .pills .edit-popup .edit-form button.save {
-          background: #007b9f;
+          background: #2c8630;
           color: white;
           border-color: transparent; }
           .pills .edit-popup .edit-form button.save:hover, .pills .edit-popup .edit-form button.save:active {
-            background: #0085AC; }
+            background: #4caf50; }
 
 /* Design */
 .design {
