change search text

--- a/static/templates/search.html
+++ b/static/templates/search.html
@@ -1,5 +1,5 @@
 <div class="index">
-	<p class="disclaimer">Search any dead historical figure you want.<br/>We have them all!</p>
+	<p class="disclaimer">Search any historical figure you want.<br/>We have them all!</p>
 
 	<form class="search-form" ng-submit="submitSearchForm()">
 
