social media targets

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,13 +18,13 @@
 		<!--facebook-->
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Thejuice">
-        <meta property="og:description" content="TheJuice History. Create an infographic about any historical figure in less than a minute">
+        <meta property="og:description" content="TheJuice Trivia. Create a quiz about any historical figure in less than a minute">
         <meta property="og:image" content="/static/img/logo.png">
         <meta property="og:url" content="http://takethejuice.com/es/">
 
         <!--twitter-->
         <meta name="twitter:title" content="TheJuice">
-        <meta name="twitter:description" content="TheJuice History. Create an infographic about any historical figure in less than a minute">
+        <meta name="twitter:description" content="TheJuice Trivia. Create a quiz about any historical figure in less than a minute">
         <meta name="twitter:image" content="/static/img/logo.png">
         <meta name="twitter:card" content="summary_large_image">
 
