--- a/templates/designs/default.html
+++ b/templates/designs/default.html
@@ -88,7 +88,7 @@
 				<ul class="error" style="display: none;"></ul>
 				<input type="email" name="studentEmail" id="studentEmail" placeholder="email">
 				<input type="email" name="teacherEmail" id="teacherEmail" placeholder="email" style="display: none;" value="{{ teacher_email }}">
-				<button>Send</button>
+				<button>Send <i id="spinner" class="fa fa-circle-o-notch" style="display: none;"></i></button>
 			</div>
 
 			<div class="logo">
