--- a/static/templates/login.html
+++ b/static/templates/login.html
@@ -14,3 +14,7 @@
 		</button>
 	</form>
 </div>
+<div class="brand">
+	<p>Made with <i class="fa fa-heart"></i> by <a target="_blank" href="http://labs.beeva.com">labs.beeva.com</a> 2017. All Rights Reserved. <a target="_blank" href="http://takethejuice.com/legal.html">Terms and conditions.</a></p>
+	<p>Contact <a href="mailto:hello@takethejuice.com">hello@takethejuice.com</a></p>
+</div>
