--- a/static/templates/search.html
+++ b/static/templates/search.html
@@ -11,7 +11,7 @@
 			Search
 		</button>
 
-		<autosuggestions query="query" lang="lang" callback="reviewPage(pageId)"></autosuggestions>
+		<!--<autosuggestions query="query" lang="lang" callback="reviewPage(pageId)"></autosuggestions>-->
 
 		<ul class='results ng-hide' ng-show='results'>
 			<li class='item' ng-repeat='result in results' ng-click="reviewPage(result.id)">{{result.name}}</li>
