--- a/static/style/templates/default.scss
+++ b/static/style/templates/default.scss
@@ -203,6 +203,10 @@ body {
 				font-weight: 400;
 				font-size: 4vw;
 			}
+			&.source {
+				font-size: 1.5em;
+				margin: 10vh 1vw;
+			}
 		}
 	}
 }
