--- a/static/style/style.css
+++ b/static/style/style.css
@@ -310,55 +310,122 @@ body {
     display: inline-block; }
 
 /* Login */
-.login {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 90%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 50px 5% 100px;
-  text-align: center; }
-  .login .login-header {
-    display: inline-block;
-    vertical-align: top;
+.login-main {
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  width: 100vw;
+  height: 85vh;
+  background-image: url("/static/img/background-login.jpg");
+  z-index: 0; }
+  .login-main:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(rgba(0, 84, 4, 0.7), rgba(0, 84, 4, 0.7));
+    z-index: -1; }
+  .login-main .inner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
     width: 100%;
     height: auto;
     text-align: center;
-    padding: 2vh 0; }
-    .login .login-header .main-logo {
+    transform: translate(-50%, -50%); }
+    .login-main .inner .login-header {
       display: inline-block;
       vertical-align: top;
-      width: 70%;
-      height: auto;
-      text-align: center;
-      font-size: 2.5em;
-      max-height: 70px; }
-      .login .login-header .main-logo img {
+      width: auto;
+      height: auto; }
+      .login-main .inner .login-header .main-logo {
+        vertical-align: top;
+        display: inline-block;
+        width: 100%;
+        height: auto;
+        padding: 4vh 10vw;
+        white-space: nowrap; }
+        .login-main .inner .login-header .main-logo img {
+          height: 6vh; }
+        .login-main .inner .login-header .main-logo span {
+          display: inline-block;
+          vertical-align: bottom;
+          font-size: 4vh;
+          color: white;
+          line-height: 6vh;
+          margin: 0 1vw; }
+      .login-main .inner .login-header .login-disclaimer {
         display: inline-block;
         vertical-align: top;
         width: 100%;
-        max-width: 400px; }
-      .login .login-header .main-logo span {
-        vertical-align: middle;
-        line-height: 100px;
-        margin: 0 2vw; }
-  .login .login-form {
-    display: inline-block;
-    vertical-align: top;
-    position: relative;
+        height: auto;
+        padding: 4vh 10vw;
+        font-size: 3.5vh;
+        line-height: 5vh;
+        color: white;
+        max-width: 900px; }
+    .login-main .inner .login-form {
+      display: inline-block;
+      vertical-align: top;
+      width: 100%;
+      padding: 4vh 10vw; }
+      .login-main .inner .login-form .button {
+        padding: 2.5vh;
+        font-size: 2vh;
+        color: black;
+        background: white;
+        border: none;
+        font-weight: 350; }
+    .login-main .inner .login-steps {
+      display: inline-block;
+      vertical-align: top;
+      width: 100%;
+      height: auto;
+      padding: 4vh 10vw;
+      font-size: 0;
+      text-align: center; }
+      .login-main .inner .login-steps > * {
+        font-size: initial; }
+      .login-main .inner .login-steps .step {
+        display: inline-block;
+        vertical-align: top;
+        position: relative;
+        width: 31%;
+        margin: 0 1%;
+        padding: 2vh 1vw;
+        color: white;
+        font-size: 2vh; }
+        .login-main .inner .login-steps .step > * {
+          display: block;
+          margin: 1vh 0; }
+        .login-main .inner .login-steps .step .step-icon {
+          font-size: 5vh; }
+        .login-main .inner .login-steps .step .step-number {
+          font-weight: bold; }
+
+.login-footer {
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+  width: 100%;
+  height: 15vh;
+  background: white; }
+  .login-footer .brand {
+    position: absolute;
+    top: 50%;
+    left: 0;
     width: 100%;
     height: auto;
-    text-align: center;
-    max-width: 640px;
-    margin: 2vh 0;
-    font-size: 0; }
-    .login .login-form .button {
-      width: 30%;
-      height: 50px;
-      box-shadow: 0px 5px 3px #f2f2f2;
-      background-color: #0085AC; }
+    transform: translateY(-50%);
+    text-align: center; }
+    .login-footer .brand p {
+      line-height: 3vh; }
+      .login-footer .brand p a {
+        text-decoration: none;
+        color: #0085AC;
+        font-weight: 350; }
 
 /* Home */
 .index {
