--- a/static/templates/login.html
+++ b/static/templates/login.html
@@ -1,20 +1,51 @@
-<div class="login">
-	<div class="login-header">
-		<div class="main-logo">
-			<img  src="/static/img/logo.svg"/><span>// Trivia</span>
+<div class="login-main">
+	<div class="inner">
+		<div class="login-header">
+			<div class="main-logo">
+				<img  src="/static/img/logo-w.svg"/><span>// trivia</span>
+			</div>
+			<div class="login-disclaimer">
+				<p>Create <b>quizzes in seconds</b> about people, places and famous events</p>
+			</div>
+		</div>
+
+		<form class="login-form" ng-submit="submitLoginForm()">
+			<button class="button" type="submit">
+				<span class="icon">
+					<i class="fa fa-facebook"></i>
+				</span>
+				Facebook Login
+			</button>
+		</form>
+
+		<div class="login-steps">
+			<div class="step">
+				<span class="step-icon">
+					<i class="fa fa-search"></i>
+				</span>
+				<span class="step-number">1</span>
+				<p class="step-desc">Select a topic</p>
+			</div>
+			<div class="step">
+				<span class="step-icon">
+					<i class="fa fa-pencil"></i>
+				</span>
+				<span class="step-number">2</span>
+				<p class="step-desc">Review the generated questions</p>
+			</div>
+			<div class="step">
+				<span class="step-icon">
+					<i class="fa fa-magic"></i>
+				</span>
+				<span class="step-number">3</span>
+				<p class="step-desc">Enjoy the results!</p>
+			</div>
 		</div>
 	</div>
-
-	<form class="login-form" ng-submit="submitLoginForm()">
-		<button class="button" type="submit">
-			<span class="icon">
-				<i class="fa fa-facebook"></i>
-			</span>
-			Facebook Login
-		</button>
-	</form>
 </div>
-<div class="brand">
-	<p>Made with <i class="fa fa-heart"></i> by <a target="_blank" href="http://labs.beeva.com">labs.beeva.com</a> 2017. All Rights Reserved. <a target="_blank" href="http://takethejuice.com/legal.html">Terms and conditions.</a></p>
-	<p>Contact <a href="mailto:hello@takethejuice.com">hello@takethejuice.com</a></p>
+<div class="login-footer">
+	<div class="brand">
+		<p>Made with <i class="fa fa-heart"></i> by <a target="_blank" href="http://labs.beeva.com">labs.beeva.com</a> 2017. All Rights Reserved. <a target="_blank" href="http://takethejuice.com/legal.html">Terms and conditions.</a></p>
+		<p>Contact <a href="mailto:hello@takethejuice.com">hello@takethejuice.com</a></p>
+	</div>
 </div>
