--- a/static/style/style.css
+++ b/static/style/style.css
@@ -425,7 +425,7 @@ body {
       .login-footer .brand p a {
         text-decoration: none;
         color: #0085AC;
-        font-weight: 350; }
+        font-weight: bold; }
 
 /* Home */
 .index {
