--- a/static/templates/search.html
+++ b/static/templates/search.html
@@ -11,17 +11,17 @@
 			Search
 		</button>
 
-		<!--<div class="languages" ng-hide="query">-->
-			<!--<input type="radio" id="langen" name="lang" ng-model="lang" value="en" ng-checked="true">-->
-			<!--<label for="langen">-->
-				<!--<img src="/static/img/flags/en.png"/>-->
-				<!--EN-->
-			<!--</label>-->
-			<!--<input type="radio" id="langes" name="lang" ng-model="lang" value="es">-->
-			<!--<label for="langes">-->
-				<!--<img src="/static/img/flags/es.png"/>-->
-				<!--ES-->
-			<!--</label>-->
-		<!--</div>-->
+		<div class="languages" ng-hide="query">
+			<input type="radio" id="langen" name="lang" ng-model="lang" value="en" ng-checked="true">
+			<label for="langen">
+				<img src="/static/img/flags/en.png"/>
+				EN
+			</label>
+			<input type="radio" id="langes" name="lang" ng-model="lang" value="es">
+			<label for="langes">
+				<img src="/static/img/flags/es.png"/>
+				ES
+			</label>
+		</div>
 	</form>
 </div>
