--- a/templates/designs/default.html
+++ b/templates/designs/default.html
@@ -43,10 +43,29 @@
 			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-			ga('create', 'UA-92654268-2', 'auto');
+			ga('create', 'UA-92654268-3', 'auto');
 			ga('send', 'pageview');
-			ga('send', 'event', 'output', 'infographic', '{{ title }}');
+			ga('send', 'event', 'output', 'trivia', '{{ title }}');
 		</script>
+
+		<!-- Facebook Pixel Code -->
+		<script>
+			!function(f,b,e,v,n,t,s)
+			{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+			n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+			if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+			n.queue=[];t=b.createElement(e);t.async=!0;
+			t.src=v;s=b.getElementsByTagName(e)[0];
+			s.parentNode.insertBefore(t,s)}(window,document,'script',
+			'https://connect.facebook.net/en_US/fbevents.js');
+			fbq('init', '950736555006881');
+			fbq('track', 'PageView');
+			fbq('track', 'output', {
+				action: 'trivia',
+				value: '{{ title }}'
+			});
+		</script>
+		<noscript><img height="1" width="1" src="https://www.facebook.com/tr?id=950736555006881&ev=PageView&noscript=1"/></noscript>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	</head>
 	<body>
