--- a/static/style/style.css
+++ b/static/style/style.css
@@ -78,7 +78,7 @@ body {
   vertical-align: top;
   width: 100%;
   height: auto;
-  background: #007b9f;
+  background: #0085AC;
   color: white;
   padding: 1vh 0;
   font-size: 0;
@@ -310,48 +310,128 @@ body {
     display: inline-block; }
 
 /* Login */
-.login {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 90%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 50px 5% 100px;
-  text-align: center; }
-  .login .login-header {
-    display: inline-block;
-    vertical-align: top;
+.login-main {
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  width: 100vw;
+  height: 85vh;
+  background-image: url("/static/img/background-login.jpg");
+  z-index: 0; }
+  .login-main:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(rgba(0, 123, 159, 0.7), rgba(0, 123, 159, 0.7));
+    z-index: -1; }
+  .login-main .inner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
     width: 100%;
     height: auto;
     text-align: center;
-    padding: 2vh 0; }
-    .login .login-header .main-logo {
+    transform: translate(-50%, -50%); }
+    .login-main .inner .login-header {
       display: inline-block;
       vertical-align: top;
-      width: 70%;
-      height: auto;
-      text-align: center; }
-      .login .login-header .main-logo img {
+      width: auto;
+      height: auto; }
+      .login-main .inner .login-header .main-logo {
+        vertical-align: top;
+        display: inline-block;
+        width: 100%;
+        height: auto;
+        padding: 4vh 10vw;
+        white-space: nowrap; }
+        .login-main .inner .login-header .main-logo img {
+          height: 6vh; }
+        .login-main .inner .login-header .main-logo span {
+          display: inline-block;
+          vertical-align: bottom;
+          font-size: 4vh;
+          color: white;
+          line-height: 6vh;
+          margin: 0 1vw; }
+      .login-main .inner .login-header .login-disclaimer {
         display: inline-block;
         vertical-align: top;
         width: 100%;
-        max-width: 400px; }
-  .login .login-form {
-    display: inline-block;
-    vertical-align: top;
-    position: relative;
+        height: auto;
+        padding: 4vh 10vw;
+        font-size: 3.5vh;
+        line-height: 5vh;
+        color: white;
+        max-width: 900px; }
+    .login-main .inner .login-form {
+      display: inline-block;
+      vertical-align: top;
+      width: 100%;
+      padding: 4vh 10vw; }
+      .login-main .inner .login-form .button {
+        padding: 2.5vh;
+        font-size: 20px;
+        color: black;
+        background: white;
+        border: none;
+        font-weight: 400;
+        box-shadow: 0 10px 25px -15px #000;
+        transition: all .2s ease-in-out;
+        cursor: pointer; }
+        .login-main .inner .login-form .button:hover, .login-main .inner .login-form .button:active {
+          background: #eee; }
+    .login-main .inner .login-steps {
+      display: inline-block;
+      vertical-align: top;
+      width: 100%;
+      height: auto;
+      padding: 4vh 10vw;
+      font-size: 0;
+      text-align: center; }
+      .login-main .inner .login-steps > * {
+        font-size: initial; }
+      .login-main .inner .login-steps .step {
+        display: inline-block;
+        vertical-align: top;
+        position: relative;
+        width: 23%;
+        margin: 0 1%;
+        padding: 2vh 1vw;
+        color: white;
+        font-size: 18px; }
+        .login-main .inner .login-steps .step > * {
+          display: block;
+          margin: 1vh 0; }
+        .login-main .inner .login-steps .step .step-icon {
+          font-size: 40px; }
+        .login-main .inner .login-steps .step .step-number {
+          font-weight: bold; }
+
+.login-footer {
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+  width: 100%;
+  height: 15vh;
+  background: white; }
+  .login-footer .brand {
+    position: absolute;
+    top: 50%;
+    left: 0;
     width: 100%;
     height: auto;
-    text-align: center;
-    max-width: 640px;
-    margin: 2vh 0;
-    font-size: 0; }
-    .login .login-form .button {
-      width: 30%;
-      height: 50px;
-      box-shadow: 0px 5px 3px #f2f2f2; }
+    transform: translateY(-50%);
+    text-align: center; }
+    .login-footer .brand p {
+      line-height: 30px;
+      font-size: 16px; }
+      .login-footer .brand p a {
+        text-decoration: none;
+        color: #0085AC;
+        font-weight: bold; }
 
 /* Home */
 .index {
@@ -361,7 +441,7 @@ body {
     font-size: 1.5em;
     font-weight: 200;
     padding: 20px 0; }
-  .index .search-form, .index .login-form {
+  .index .search-form {
     display: inline-block;
     vertical-align: top;
     position: relative;
@@ -371,7 +451,7 @@ body {
     max-width: 640px;
     margin: 2vh 0;
     font-size: 0; }
-    .index .search-form input.query, .index .login-form input.query {
+    .index .search-form input.query {
       display: inline-block;
       vertical-align: top;
       width: 67%;
@@ -387,23 +467,23 @@ body {
       outline: none;
       box-sizing: border-box;
       box-shadow: 0px 5px 3px #f2f2f2; }
-    .index .search-form .button, .index .login-form .button {
+    .index .search-form .button {
       width: 30%;
       height: 50px;
       box-shadow: 0px 5px 3px #f2f2f2; }
-    .index .search-form .languages, .index .login-form .languages {
+    .index .search-form .languages {
       display: inline-block;
       width: 100%;
       margin: 10px 0;
       height: 30px;
       text-align: center; }
-      .index .search-form .languages input, .index .login-form .languages input {
+      .index .search-form .languages input {
         position: absolute;
         opacity: 0;
         visibility: hidden; }
-        .index .search-form .languages input:checked + label, .index .login-form .languages input:checked + label {
+        .index .search-form .languages input:checked + label {
           background: #eee; }
-      .index .search-form .languages label, .index .login-form .languages label {
+      .index .search-form .languages label {
         display: inline-block;
         vertical-align: top;
         text-transform: uppercase;
@@ -418,11 +498,11 @@ body {
         cursor: pointer;
         line-height: 24px;
         border-radius: 3px; }
-        .index .search-form .languages label img, .index .login-form .languages label img {
+        .index .search-form .languages label img {
           display: inline-block;
           vertical-align: top;
           height: 24px; }
-    .index .search-form .results, .index .login-form .results {
+    .index .search-form .results {
       position: absolute;
       display: block;
       margin-top: -1px;
@@ -433,7 +513,7 @@ body {
       overflow-y: auto;
       border: 1px solid #dddddd;
       z-index: 1; }
-      .index .search-form .results .item, .index .login-form .results .item {
+      .index .search-form .results .item {
         display: inline-block;
         vertical-align: top;
         width: 100%;
@@ -444,7 +524,7 @@ body {
         background: white;
         cursor: pointer;
         transition: all .2s ease-in-out; }
-        .index .search-form .results .item:hover, .index .search-form .results .item:active, .index .search-form .results .item.current, .index .login-form .results .item:hover, .index .login-form .results .item:active, .index .login-form .results .item.current {
+        .index .search-form .results .item:hover, .index .search-form .results .item:active, .index .search-form .results .item.current {
           background: #007b9f;
           color: white; }
 
