--- a/static/style/templates/nude.css
+++ b/static/style/templates/nude.css
@@ -1,9 +1,50 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab");
 body {
-  font-family: 'Roboto Slab', serif;
   margin: 10vh auto;
-  max-width: 900px;
-  background: #eeeeee;
-  color: #222222; }
+  max-width: 700px;
+  padding: 2vh 5vw;
+  background: white;
+  color: #222222;
+  font-family: 'Roboto Slab', serif;
+  letter-spacing: 0;
+  font-weight: 400;
+  font-style: normal;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -moz-font-feature-settings: "liga" on; }
+
+ul {
+  list-style: none;
+  margin: 5vh 0;
+  padding: 0; }
+  ul li {
+    line-height: 30px;
+    margin: 2vh 0; }
+
+.logo {
+  width: 300px;
+  margin: 5vh auto;
+  text-align: center; }
+  .logo span {
+    display: inline-block;
+    vertical-align: top;
+    width: auto;
+    height: auto;
+    margin: 15px 0 10px;
+    padding: 5px 10px;
+    background: #0085AC;
+    color: white;
+    font-size: 16px; }
+  .logo img {
+    display: inline-block;
+    vertical-align: top;
+    width: 100%; }
+  .logo a {
+    font-size: 16px;
+    color: #0085AC;
+    font-weight: bold;
+    text-decoration: none;
+    text-transform: none; }
 
 /*# sourceMappingURL=nude.css.map */
